# repo-9

./: .dockerignore  .eslintrc.json  .gitignore  .osfm.yaml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.PL  README.md  build.gradle  cpanfile  dist.ini  entrypoint.sh  go.mod  go.sum  ignore.txt  index.html  main.go  modular.py  original-readme.md  package-lock.json  package.json  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt  services.yml  setup.py  version.py
.cm/: gitstream.cm
.github/: CODEOWNERS  dependabot.yml
.release/: package.json
ASSFoundation/: index.html
Add Grain/: index.html
Auto Fade/: index.html
Bidirectional Snapping/: index.html
Edit Tags/: index.html
Extrapolate Tracking/: index.html
Fit Text in Clip/: index.html
Fold Operations/: index.html
KFX/: index.html
Quality Report/: index.html
Remove Tags/: index.html
Rotated Gradient/: index.html
Timing Assistant/: index.html
Vector Gradient/: index.html
Wave/: index.html
Wobble/: index.html
acceptance/: go.mod  go.sum
alpine/: Dockerfile
android-arm64/: Dockerfile
android-armv7/: Dockerfile
centos7/: Dockerfile
centos7-devtoolset7/: Dockerfile
downstreams/: go.mod  go.sum
go-libs/: go.mod  go.sum
gradle/: libs.versions.toml
lib/: LandingCompany.pm
linux-arm64/: Dockerfile
linux-arm64-lts/: Dockerfile
linux-arm64-musl/: Dockerfile
linux-armv6/: Dockerfile
linux-armv7/: Dockerfile
linux-armv7l-musl/: Dockerfile
llnotes/: go.mod  go.sum
metascan/: go.mod  go.sum
modular_api/: .env.example  (+4 more)
(+450 files in other folders)
